--- a/Rayman2LevelSwitcher/MainWindow.xaml
+++ b/Rayman2LevelSwitcher/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rayman2LevelSwitcher"
         mc:Ignorable="d"
-        Title="R2 Level Switcher" Height="446.051" Width="289.455">
+        Title="R2 Level Switcher" Height="494.051" Width="320">
     <Grid>
-        <TreeView x:Name="treeView_levels" Margin="10,35,10,10" MouseDoubleClick="treeView_levels_MouseDoubleClick">
+        <TreeView x:Name="treeView_levels" Margin="10,57,10.2,9.8" MouseDoubleClick="treeView_levels_MouseDoubleClick">
             <TreeViewItem Header="General/Extra">
                 <TreeViewItem x:Name="menu" Header="Menu" HorizontalAlignment="Left" Width="213"/>
                 <TreeViewItem x:Name="mapmonde" Header="The Hall of Doors" HorizontalAlignment="Left" Width="213"/>
@@ -47,7 +47,7 @@
             </TreeViewItem>
             <TreeViewItem Header="The Bayou">
                 <TreeViewItem x:Name="chase_10" Header="Bayou 1" HorizontalAlignment="Left" Width="213"/>
-                <TreeViewItem x:Name="chase_20" Header="Bayou 2" HorizontalAlignment="Left" Width="213"/>
+                <TreeViewItem x:Name="chase_22" Header="Bayou 2" HorizontalAlignment="Left" Width="213"/>
             </TreeViewItem>
             <TreeViewItem Header="The Sanctuary of Water and Ice">
                 <TreeViewItem x:Name="water_10" Header="Sanctuary of Water and Ice 1" HorizontalAlignment="Left" Width="213"/>
@@ -119,9 +119,14 @@
             </TreeViewItem>
             <TreeViewItem x:Name="rhop_10" Header="The Crow's Nest"></TreeViewItem>
         </TreeView>
-        <Button x:Name="btn_switch" Content="Switch" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Click="btn_Switch_Click"/>
-        <Button x:Name="btn_random" Content="Random" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="80" Click="btn_random_Click"/>
-        <Button x:Name="btn_reload" Content="Reload" Margin="101,10,100,0" VerticalAlignment="Top" Click="btn_Reload_Click"/>
+        <Button x:Name="btn_switch" Content="Switch" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="70" Click="btn_Switch_Click"/>
+        <Button x:Name="btn_random" Content="Random" Margin="0,10,71.6,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="60" Click="btn_random_Click"/>
+        <Button x:Name="btn_reload" Content="Reload" Margin="85,10,0,0" VerticalAlignment="Top" Click="btn_Reload_Click" HorizontalAlignment="Left" Width="70"/>
+        <Button x:Name="btn_savepos" Content="Save Pos" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Width="70" Click="btn_savepos_Click"/>
+        <Button x:Name="btn_loadpos" Content="Load Pos" Margin="85,34,0,0" VerticalAlignment="Top" Click="btn_loadpos_Click" HorizontalAlignment="Left" Width="70"/>
+        <Button x:Name="btn_zerohp" Content="0hp" HorizontalAlignment="Right" Margin="0,34,71.6,0" VerticalAlignment="Top" Width="60" Click="btn_zerohp_Click"/>
+        <Button x:Name="btn_void" ToolTip="Press this while game is paused, then deathwarp for void (don't unpause)." Content="VOID" Margin="0,34,10.6,0" VerticalAlignment="Top" Click="btn_void_Click" HorizontalAlignment="Right" Width="56"/>
+        <CheckBox x:Name="chk_hotkeys" Content="Hotkeys" Margin="0,12,6.6,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="60"/>
 
     </Grid>
 </Window>
