--- a/Rayman2LevelSwitcher/MainWindow.xaml
+++ b/Rayman2LevelSwitcher/MainWindow.xaml
@@ -126,7 +126,7 @@
         <Button x:Name="btn_loadpos" Content="Load Pos" Margin="85,34,0,0" VerticalAlignment="Top" Click="btn_loadpos_Click" HorizontalAlignment="Left" Width="70"/>
         <Button x:Name="btn_zerohp" Content="0hp" HorizontalAlignment="Right" Margin="0,34,132,0" VerticalAlignment="Top" Width="60" Click="btn_zerohp_Click"/>
         <Button x:Name="btn_void" ToolTip="Press this while game is paused, then deathwarp for void (don't unpause)." Content="VOID" Margin="0,34,71,0" VerticalAlignment="Top" Click="btn_void_Click" HorizontalAlignment="Right" Width="56"/>
-        <CheckBox x:Name="chk_hotkeys" Content="Hotkeys" Margin="0,13,60,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="67"/>
+        <CheckBox x:Name="chk_hotkeys" Content="Hotkeys" Margin="0,13,60,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="67" Checked="chk_hotkeys_Checked" Unchecked="chk_hotkeys_Unchecked"/>
         <Expander x:Name="exp_bookmarkmenu" Header="Bookmarks" ExpandDirection="Right" Margin="0,13,-244,8" HorizontalAlignment="Right" Width="310" Collapsed="exp_bookmarkmenu_Collapsed" Expanded="exp_bookmarkmenu_Expanded">
             <Grid>
                 <TextBlock Text="Bookmarks:" Margin="10,6,157,0" VerticalAlignment="Top" Height="16"/>
