--- a/Rayman2LevelSwitcher/App.xaml
+++ b/Rayman2LevelSwitcher/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Rayman2LevelSwitcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Windows/MainWindow.xaml">
+             Startup="ApplicationStartup">
     <Application.Resources>
          
     </Application.Resources>
